chore: Add deploy script with production branch alias

--- a/frontend/black-sheep-app/package.json
+++ b/frontend/black-sheep-app/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "deploy": "npm run build && wrangler pages deploy dist/black-sheep-app/browser --project-name=bstabs --branch=production"
   },
   "prettier": {
     "printWidth": 100,
