--- a/frontend/black-sheep-app/package.json
+++ b/frontend/black-sheep-app/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "npm run build && wrangler pages deploy dist/black-sheep-app/browser --project-name=bstabs --branch=production"
+    "deploy": "npm run build && wrangler pages deploy dist/black-sheep-app/browser --project-name=bstabs --branch=main",
+    "deploy:admin": "npm run build && wrangler pages deploy dist/black-sheep-app/browser --project-name=bstabs --branch=admin"
   },
   "prettier": {
     "printWidth": 100,
